--- a/ionic-basics/src/pages/quotes/quotes.html
+++ b/ionic-basics/src/pages/quotes/quotes.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the QuotesPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
     <ion-title>quotes</ion-title>
@@ -11,5 +5,33 @@
 </ion-header>
 
 <ion-content padding>
+
+  <ion-card *ngFor="let quote of category.quotes; index as i">
+
+    <ion-card-header>
+      {{ i+1 }}
+    </ion-card-header>
+
+    <ion-card-content>
+      <p>{{ quote.text }}</p>
+
+      <ion-grid>
+        <ion-row>
+          <ion-col col-3></ion-col>
+          <ion-col col-9>
+            <p class="author">- {{quote.person}}</p>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col col-6></ion-col>
+          <ion-col col-6>
+            <button ion-button clear (click)="onFavorite(quote)">Favorite</button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+
+    </ion-card-content>
+
+  </ion-card>
 
 </ion-content>
