--- a/ionic-basics/src/pages/quote/quote.html
+++ b/ionic-basics/src/pages/quote/quote.html
@@ -1,15 +1,36 @@
-<!--
-  Generated template for the QuotePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
-    <ion-title>quote</ion-title>
+    <ion-title>{{ quote.person | uppercase }}</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
+
+  <ion-card>
+    <ion-card-content>
+      <h4>{{ quote.text }}</h4>
+
+      <ion-grid>
+        <ion-row>
+          <ion-col col-6>
+            <button 
+              (click)="onClose(true)"
+              color="danger" 
+              ion-button 
+              clear>Unfavorite</button>
+          </ion-col>
+          <ion-col col-6>
+            <button 
+              (click)="onClose()"
+              ion-button 
+              clear 
+              color="dark">Close</button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+
+    </ion-card-content>
+
+  </ion-card>
 
 </ion-content>
